[Fix Bugs] all nav Bugs Fixed

--- a/app/src/main/res/navigation/nav_writing_sentence.xml
+++ b/app/src/main/res/navigation/nav_writing_sentence.xml
@@ -15,10 +15,7 @@
         <action
             android:id="@+id/action_writing_step1_fg_to_writing_step2_fg"
             app:destination="@id/writing_sentence_step2_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            />
     </fragment>
 
     <fragment
@@ -28,17 +25,11 @@
         <action
             android:id="@+id/action_writing_step2_fg_to_writing_step3_fg"
             app:destination="@id/writing_sentence_step3_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            />
         <action
             android:id="@+id/action_writing_step2_fg_to_writing_step1_fg"
             app:destination="@id/writing_sentence_step1_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            />
     </fragment>
 
     <fragment
@@ -48,22 +39,15 @@
         <action
             android:id="@+id/action_writing_step3_fg_to_writing_step2_fg"
             app:destination="@id/writing_sentence_step2_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+           />
         <action
-            android:id="@+id/action_writing_step3_fg_to_writing_finish_fg"
-            app:destination="@id/writing_sentence_finish_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            android:id="@+id/action_writing_sentence_step3_fragment_to_writing_sentence_finish_fragment"
+            app:destination="@id/writing_sentence_finish_fragment" />
     </fragment>
 
     <fragment
         android:id="@+id/writing_sentence_finish_fragment"
-        android:name="com.example.mongleandroid_release.fragment.WritingSentenceStep3Fragment"
+        android:name="com.example.mongleandroid_release.fragment.WritingSentenceFinishFragment"
         tools:layout="@layout/writing_sentence_finish">
 
     </fragment>
