[Implement Features] step1,2 빈칸 알림

--- a/app/src/main/res/navigation/nav_writing_sentence.xml
+++ b/app/src/main/res/navigation/nav_writing_sentence.xml
@@ -29,6 +29,9 @@
         <action
             android:id="@+id/action_writing_step2_fg_to_writing_step1_fg"
             app:destination="@id/writing_sentence_step1_fragment"
+            app:popUpTo="@+id/writing_sentence_step1_fragment"
+            app:popUpToInclusive="true"
+
             />
         <action
             android:id="@+id/action_writing_sentence_step2_fragment_to_writing_sentence_book_search_fragment"
@@ -57,6 +60,8 @@
         <action
             android:id="@+id/action_writing_step3_fg_to_writing_step2_fg"
             app:destination="@id/writing_sentence_step2_fragment"
+            app:popUpTo="@+id/writing_sentence_step2_fragment"
+            app:popUpToInclusive="true"
            />
         <action
             android:id="@+id/action_writing_sentence_step3_fragment_to_writing_sentence_finish_fragment"
