--- a/app/src/main/res/navigation/nav_writing_sentence.xml
+++ b/app/src/main/res/navigation/nav_writing_sentence.xml
@@ -71,7 +71,9 @@
             app:destination="@id/writing_sentence_theme_search_fragment" />
         <argument
             android:name="theme"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="false"
+            android:defaultValue=""/>
     </fragment>
 
     <fragment
