--- a/app/src/main/res/layout/writing_sentence_theme_result.xml
+++ b/app/src/main/res/layout/writing_sentence_theme_result.xml
@@ -209,6 +209,44 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <LinearLayout
+        android:id="@+id/writing_sentence_theme_search_ll_no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search_empty2"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="검색 결과가 없습니다."
+            android:textColor="@color/black"
+            android:textSize="19sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다른 키워드로 검색해보세요!"
+            android:textColor="@color/very_light_pink_two"
+            android:textSize="16sp" />
+
+
+
+    </LinearLayout>
+
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="160dp"
