[Fix Bugs] 검색결과 오류 해결

--- a/app/src/main/res/layout/fragment_search_curator.xml
+++ b/app/src/main/res/layout/fragment_search_curator.xml
@@ -11,7 +11,7 @@
         android:id="@+id/fragment_search_curator_cl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#59bcbcbc"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,11 +41,11 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="11dp"
                 android:layout_marginBottom="11dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="검색된 큐레이터 "
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -56,11 +57,11 @@
                 android:id="@+id/fragment_search_curator_tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="0"
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -72,11 +73,11 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="명"
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -111,11 +112,20 @@
         android:id="@+id/fragment_search_curator_cl_noresult"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone" >
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/view7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#59bcbcbc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView14"
@@ -134,10 +144,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="4sp"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:lineSpacingExtra="4sp"
             android:text="검색 결과가 없습니다."
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -149,10 +159,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="4sp"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:lineSpacingExtra="4sp"
             android:text="다른 키워드로 검색해보세요!"
             android:textColor="@color/very_light_pink_two"
             android:textSize="13sp"
