--- a/app/src/main/res/layout/fragment_search_theme.xml
+++ b/app/src/main/res/layout/fragment_search_theme.xml
@@ -11,7 +11,7 @@
         android:id="@+id/fragment_search_theme_cl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#59bcbcbc"
-            app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,11 +41,11 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="11dp"
                 android:layout_marginBottom="11dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="검색된 테마 "
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -56,11 +57,11 @@
                 android:id="@+id/fragment_search_theme_tv_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="0"
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -72,11 +73,11 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanscjkkr_demilight"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="1sp"
-                android:fontFamily="@font/notosanscjkkr_demilight"
-                android:includeFontPadding="false"
                 android:text="개"
                 android:textColor="#565656"
                 android:textSize="14sp"
@@ -118,6 +119,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <View
+            android:id="@+id/view4"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#59bcbcbc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imageView14"
             android:layout_width="wrap_content"
@@ -135,10 +145,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="4sp"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:lineSpacingExtra="4sp"
             android:text="검색 결과가 없습니다."
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -150,10 +160,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="4sp"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:includeFontPadding="false"
+            android:letterSpacing="-0.02"
+            android:lineSpacingExtra="4sp"
             android:text="다른 키워드로 검색해보세요!"
             android:textColor="@color/very_light_pink_two"
             android:textSize="13sp"
