[Add Codes] (/post/sentence) req data init

--- a/app/src/main/res/layout/item_writing_sentence_theme_result.xml
+++ b/app/src/main/res/layout/item_writing_sentence_theme_result.xml
@@ -32,6 +32,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <TextView
+        android:id="@+id/item_writing_sentence_theme_result_tv_themeIdx"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
+
     <ImageView
         android:id="@+id/item_writing_sentence_theme_result_img_chk"
         android:layout_width="match_parent"
