[Implement Features] sentencePost() impl

--- a/app/src/main/res/layout/item_writing_sentence_theme_result.xml
+++ b/app/src/main/res/layout/item_writing_sentence_theme_result.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.5"
-        android:visibility="visible"
+        android:visibility="gone"
         android:src="@drawable/writing_sentence_theme_5_box_select"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
