--- a/app/src/main/res/layout/activity_curator_keyword.xml
+++ b/app/src/main/res/layout/activity_curator_keyword.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/activity_curator_keyword_tv_keyword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosanscjkkr_regular"
@@ -48,7 +49,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_curator_keyword"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
