[Implement Features] 테마속 큐레이터 구독여부 서버 연결

--- a/app/src/main/res/layout/item_search_curator.xml
+++ b/app/src/main/res/layout/item_search_curator.xml
@@ -117,12 +117,16 @@
             android:layout_width="66dp"
             android:layout_height="30dp"
             android:layout_marginTop="45dp"
-            android:layout_marginRight="28dp"
+            android:layout_marginEnd="28dp"
             android:layout_marginBottom="45dp"
+            android:fontFamily="@font/notosanscjkkr_regular"
+            android:includeFontPadding="false"
             android:background="@drawable/btn_subscribe"
             android:button="@null"
             android:gravity="center"
             android:text="구독"
+            android:textSize="14sp"
+            android:letterSpacing="-0.02"
             android:textColor="@color/cb_subscribe_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
