--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -187,12 +187,24 @@
         android:id="@+id/tv_setting_privacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="개인정보 처리방침"
+        android:text="개인정보 이용약관"
         android:textSize="17sp"
         android:textColor="@color/black_two"
         android:letterSpacing="-0.04"
         android:layout_marginTop="13dp"
         app:layout_constraintTop_toBottomOf="@id/tv_setting_info_service"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_service_use"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="서비스 이용 약관"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_privacy"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -204,7 +216,7 @@
         android:textColor="@color/black_two"
         android:letterSpacing="-0.04"
         android:layout_marginTop="13dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_setting_privacy"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_service_use"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
@@ -283,6 +295,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_setting_privacy"
         app:layout_constraintBottom_toBottomOf="@id/tv_setting_privacy" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_service_use"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_service_use" />
 
     <ImageView
         android:layout_width="wrap_content"
