--- a/app/src/main/res/layout/item_writing_theme_img.xml
+++ b/app/src/main/res/layout/item_writing_theme_img.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_width="77dp"
+    android:layout_height="77dp"
     android:paddingEnd="7dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/item_writing_theme_tv_title"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/item_writing_theme_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/writing_sentence_theme_5_img_4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -19,10 +19,10 @@
 
     <ImageView
         android:id="@+id/item_writing_theme_img_chk"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:alpha="0.5"
-        android:visibility="visible"
+        android:visibility="gone"
         android:src="@drawable/writing_sentence_theme_5_box_select"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -30,6 +30,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/item_writing_theme_tv_imgIdx"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
 
 
 
