--- a/app/src/main/res/layout/writing_theme_step1.xml
+++ b/app/src/main/res/layout/writing_theme_step1.xml
@@ -150,16 +150,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/writing_theme_rv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_marginTop="250dp"
         android:orientation="horizontal"
-        android:paddingHorizontal="16dp"
         android:clipToPadding="false"
         android:visibility="visible"
+        android:paddingEnd="23dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/gl_left"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_writing_theme_img"
         />
